added enpoint for download csv for retailers
